--- a/docs/overview/master00-amendment_record.adoc
+++ b/docs/overview/master00-amendment_record.adoc
@@ -7,9 +7,9 @@
 4+^h|*PROC Release 2.0.0 (unreleased)*
 
 |[[latest_issue]]0.5.0
-|{spec_tickets}/SPECPROC-xx[SPECPROC-xx^]. Add Overview document.
+|{spec_tickets}/SPECPROC-45[SPECPROC-45^]. Add Process component Overview document.
 |T Beale
-|[[latest_issue_date]]21 Dec 2020
+|[[latest_issue_date]]23 Dec 2020
 
 |===
 
